# Oral-Account-App

./: .gitignore  README.md  db.db  game.py  main.py  pyproject.toml  sql_commands.py
ui/: end_game_alert.ui  frame1.ui  frame2.ui  game.ui  hello_screen.ui  login.ui  signin.ui  signin_succes.ui  signin_success.ui  start_game_alert.ui  table.ui
