[tool.poetry]
name = "6-pyqt"
version = "0.1.0"
description = ""
authors = ["Mikhail Ovechkin <mpvglondon@vk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
